--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start-docker": " docker-compose -f docker/docker-compose.yml up",
+    "stop-docker": " docker-compose -f docker/docker-compose.yml down",
+    "start-node-server": "ts-node --project server/tsconfig.json ./server/node-server/server.ts",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -12,14 +15,24 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.2.0",
+    "@angular/cdk": "~7.2.0",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
+    "@angular/flex-layout": "~7.0.0-beta.20",
     "@angular/forms": "~7.2.0",
+    "@angular/material": "~7.2.0",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "axios": "^0.19.0",
+    "body-parser": "~1.19.0",
     "core-js": "^2.5.4",
+    "cors": "^2.8.5",
+    "express": "~4.17.1",
+    "hammerjs": "^2.0.8",
+    "multer": "^1.4.2",
+    "newman": "~4.5.5",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
@@ -29,9 +42,9 @@
     "@angular/cli": "~7.2.3",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^8.9.5",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -42,6 +55,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
+    "ts-node-dev": "~1.0.0-pre.43",
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
   }
